fixed overflow x in home page

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -37,9 +37,9 @@
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.7),
-    0 0 40px 10px rgba(255, 255, 255, 0.2),
-    0 0 50px 20px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.1),
+    0 0 40px 10px rgba(255, 255, 255, 0.1),
+    0 0 50px 20px rgba(255, 255, 255, 0.1);
 }
 
 .heroImgBox::before {
@@ -217,6 +217,11 @@
     font-size: 2.5rem;
   }
 
+  .heroImgBox {
+    max-width: 280px;
+    height: 280px;
+  }
+
   .heroDescription {
     font-size: 1.2rem;
     margin-bottom: 3rem;
@@ -245,7 +250,6 @@
 
   .heroImgBox {
     max-width: 220px;
-
     height: 220px;
   }
 
@@ -280,7 +284,6 @@
   }
 }
 
-/* Apply color effects */
 .imgBoxContent img.grayscale {
   filter: grayscale(100%);
 }
